[gd_scene load_steps=27 format=2]

[ext_resource path="res://Sprites/player/player-spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/Player_Backpack.tscn" type="PackedScene" id=3]
[ext_resource path="res://Rooms/Item 1.gd" type="Script" id=4]
[ext_resource path="res://Rooms/Exit_Shop.gd" type="Script" id=5]
[ext_resource path="res://Rooms/TextureRect.gd" type="Script" id=6]
[ext_resource path="res://Rooms/Item_Shop.gd" type="Script" id=7]
[ext_resource path="res://Sprites/Black_Texture.PNG" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 13, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 13, 48, 13, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 26, 48, 13, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 39, 48, 13, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 72, 13, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 13, 72, 13, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 26, 72, 13, 24 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 39, 72, 13, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 24, 13, 24 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 13, 24, 13, 24 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 26, 24, 13, 24 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 39, 24, 13, 24 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 13, 24 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 13, 0, 13, 24 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 26, 0, 13, 24 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 39, 0, 13, 24 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "walk_right",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "walk_up",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "walk_left",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "walk_down",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=20]
radius = 2.27782
height = 0.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.515625, -0.201785 )
frames = SubResource( 19 )
animation = "walk_left"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.0441933, 9.49427 )
shape = SubResource( 20 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Backpack" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Player_Shop" type="Control" parent="."]
visible = false
margin_left = -175.0
margin_top = -100.0
margin_right = 176.0
margin_bottom = 101.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit_Shop" type="Button" parent="Player_Shop"]
visible = false
margin_left = 309.712
margin_top = 176.136
margin_right = 344.712
margin_bottom = 196.136
text = "Exit"
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Player_Shop"]
anchor_bottom = 0.157
margin_left = 237.0
margin_top = 2.0
margin_right = 346.0
margin_bottom = 137.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Item 0" type="Button" parent="Player_Shop/GridContainer"]
margin_right = 55.0
margin_bottom = 20.0
text = "Item 0"
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Item 1" type="Button" parent="Player_Shop/GridContainer"]
margin_top = 24.0
margin_right = 55.0
margin_bottom = 44.0
text = "Item 1"
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Item 2" type="Button" parent="Player_Shop/GridContainer"]
margin_top = 48.0
margin_right = 55.0
margin_bottom = 68.0
text = "Item 2"
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Item_Description" type="TextureRect" parent="Player_Shop"]
margin_right = 482.0
margin_bottom = 271.0
rect_scale = Vector2( 0.482899, 0.742695 )
texture = ExtResource( 8 )
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Item Description" type="RichTextLabel" parent="Player_Shop/Item_Description"]
margin_left = -4.05908
margin_right = 481.941
margin_bottom = 274.0
rect_scale = Vector2( 0.991095, 0.985247 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Confirm" type="Button" parent="Player_Shop/Item_Description"]
margin_top = 250.0
margin_right = 482.0
margin_bottom = 270.0
text = "Click to confirm purchase"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
[connection signal="show" from="Player_Shop/GridContainer/Item 0" to="Player_Shop/Item_Description" method="_on_Item_0_show"]
[connection signal="show" from="Player_Shop/GridContainer/Item 1" to="Player_Shop/Item_Description" method="_on_Item_1_show"]
[connection signal="show" from="Player_Shop/GridContainer/Item 2" to="Player_Shop/Item_Description" method="_on_Item_2_show"]
